@@ -7,6 +7,8 @@ Changelog of lizard-map
 
 - Added option: allow_custom_legend in adapter.
 
+- Added optional transparency slider.
+
 
 1.15 (2010-09-27)
 -----------------
